; ModuleID = '/home/carl/AnghaBench/linux/tools/perf/util/extr_thread.c_thread__namespaces.c'
source_filename = "/home/carl/AnghaBench/linux/tools/perf/util/extr_thread.c_thread__namespaces.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.namespaces = type { i32 }
%struct.thread = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.namespaces* @thread__namespaces(%struct.thread* %0) #0 {
  %2 = alloca %struct.thread*, align 8
  %3 = alloca %struct.namespaces*, align 8
  store %struct.thread* %0, %struct.thread** %2, align 8
  %4 = load %struct.thread*, %struct.thread** %2, align 8
  %5 = getelementptr inbounds %struct.thread, %struct.thread* %4, i32 0, i32 0
  %6 = call i32 @down_read(i32* %5)
  %7 = load %struct.thread*, %struct.thread** %2, align 8
  %8 = call %struct.namespaces* @__thread__namespaces(%struct.thread* %7)
  store %struct.namespaces* %8, %struct.namespaces** %3, align 8
  %9 = load %struct.thread*, %struct.thread** %2, align 8
  %10 = getelementptr inbounds %struct.thread, %struct.thread* %9, i32 0, i32 0
  %11 = call i32 @up_read(i32* %10)
  %12 = load %struct.namespaces*, %struct.namespaces** %3, align 8
  ret %struct.namespaces* %12
}

declare dso_local i32 @down_read(i32*) #1

declare dso_local %struct.namespaces* @__thread__namespaces(%struct.thread*) #1

declare dso_local i32 @up_read(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
